# FlashFilter

./: README.md  pseudo
censor-algorithm/: main.py
flashfilter/: Cargo.toml  build.rs  index.html
flashfilter/src/: filter.rs  lib.rs  main.rs
flashfilter/src/platform/: macos.rs  mod.rs  windows.rs
flashfilter/src/shaders/: color_ema.wgsl  delta_ema.wgsl  output.wgsl
screen-annotate/: ideas.swift
screenfilter-electron/: index.html  package.json  tsconfig.json
screenfilter-electron/src/: censor.ts  flashing-dissolver-naive.ts  flashing-dissolver.ts  main.ts  renderer.ts
