[package]
name = "flashfilter"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.30"
wgpu = "23"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"

[target.'cfg(windows)'.dependencies]
dxgi-capture-rs = "1.2.1"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = "1.5.0"
objc2 = "0.5"
